Added query field to request Changed a key name in settings.json

--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
         "username": "",
         "password": "",
         "index": "",
-        "pageLength": "" 
+        "page_length": "" 
     },
     "mongo" : {
         "url": "",
